<resources>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="create_new_user">Sign Up</string>
    <string name="username_hint">example@email.com</string>
    <string name="password_hint">**********</string>
    <string name="profile_pic">Profile Picture</string>
    <string name="create_user">Create User</string>
    <string name="recover_credentials">Recover Credentials</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
