<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presenter.LoginScreenActivity" android:id="@+id/loginScreenLayout">
    <android.support.constraint.ConstraintLayout
            android:layout_width="736dp"
            android:layout_height="407dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/layout">

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/userName"
                android:inputType="textEmailAddress" android:hint="@string/username_hint"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toTopOf="@+id/passwordText" android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/usernameText"/>
        <Button
                android:text="@string/recover_credentials"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/recoverInfo"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/newUser"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="1dp" app:layout_constraintHorizontal_bias="0.5"
                android:layout_marginBottom="42dp" app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
                android:text="@string/password"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:id="@+id/passwordText"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/password"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintTop_toBottomOf="@+id/userName"/>
        <Button
                android:text="@string/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/login"
                android:textColorLink="@android:color/background_dark"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/password"
                app:layout_constraintEnd_toEndOf="@+id/password"
                app:layout_constraintBottom_toTopOf="@+id/recoverInfo" app:layout_constraintStart_toEndOf="@+id/newUser"
                app:layout_constraintVertical_bias="0.241"/>
        <TextView
                android:text="@string/user_name"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:id="@+id/usernameText"
                android:layout_marginEnd="84dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/userName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.579"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp"
                app:layout_constraintVertical_bias="0.0"/>
        <Button
                android:text="@string/create_new_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/newUser"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
                android:layout_marginStart="264dp"
                app:layout_constraintTop_toBottomOf="@+id/password"
                app:layout_constraintBottom_toTopOf="@+id/recoverInfo" app:layout_constraintEnd_toStartOf="@+id/login"
                android:layout_marginEnd="39dp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/password"
                android:hint="@string/password_hint"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="185dp" android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordText"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>