<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent" android:id="@+id/constraintLayout3">

    <android.support.constraint.ConstraintLayout
            android:layout_width="722dp"
            android:layout_height="437dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/signupPassword"
                app:layout_constraintEnd_toStartOf="@+id/newPasswordEntry"
                android:layout_marginEnd="8dp" android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/signupUsername" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/newPasswordEntry" app:layout_constraintVertical_bias="1.0"
                tools:text="@string/password" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="184dp" app:layout_constraintHorizontal_bias="0.0"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/signupUsername"
                tools:text="@string/user_name"
                app:layout_constraintEnd_toStartOf="@+id/newUserEntry"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="177dp" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/signupPassword"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/createUserButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/newPasswordEntry"
                tools:text="@string/recover_credentials" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="6dp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/newPasswordEntry"
                android:hint="@string/password_hint"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/signupPassword"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/newUserEntry"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/createUserButton"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/newUserEntry"
                android:hint="@string/username_hint"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/signupUsername"
                app:layout_constraintBottom_toTopOf="@+id/newPasswordEntry" android:layout_marginBottom="16dp"
                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/profilePicButton2"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/profilePicButton2"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/newUserEntry"
                tools:text="@string/profile_pic"/>
        <ImageButton
                android:layout_width="232dp"
                android:layout_height="224dp" app:srcCompat="@drawable/blank_profile_pic"
                android:id="@+id/profilePicButton2"
                android:cropToPadding="false" android:adjustViewBounds="false" android:scaleType="centerInside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.075"
                app:layout_constraintHorizontal_bias="0.5"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>